brat/test/golden/binding/let.brat.golden
Error in test/golden/binding/let.brat on line 7:
badBinding = let x = twoThings in x
             ^^^^^^^^^^^^^^^^^^^^^^

  Internal error: Expected empty unders after abstract, got:
  (b1 :: Int)

