brat/test/golden/binding/let.brat
# Function definitions can represent multiple values:
twoThings :: Int, Int
twoThings = 1, 2

# But bindings cannot:
badBinding :: Int, Int
badBinding = let x = twoThings in x
